--- a/pifan.service
+++ b/pifan.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-User=pi
+User=xcapt
 WorkingDirectory=/home/xcapt/repos/pifan
 ExecStart=/usr/bin/python3 /home/xcapt/repos/pifan/cpu_temp.py
 Restart=always
